feat: implement E7 notification center
